_includes/manuals/1.7/7.1_novnc.md
Foreman uses the excellent javascript VNC library [noVNC](https://novnc.com/info.html), which allows clientless VNC within a web browser. When a console is opened by the user's web browser, Foreman opens a connection to TCP Port 5910 (and up) on the hypervisor and redirects that itself.

### Requirements

* Recent web browser
* Open network connection from the workstation where the web browser runs on to your Foreman server and from your Foreman server to the hypervisor on TCP ports 5910 - 5930.


### Encrypted Web Sockets

For VNC only, encrypted connections are the default on new installations.  If you have an older installation of Foreman, you can configure encrypted websockets by adding these lines to `/etc/foreman/settings.yml`, and configuring the correct path to the same SSL certificates apache uses:


    :websockets_encrypt: true
    :websockets_ssl_key: /var/lib/puppet/ssl/private_keys/foreman.example.com
    :websockets_ssl_cert: /var/lib/puppet/ssl/certs/foreman.example.com

### Known issues

* SPICE connections are not encrypted.
* For encrypted connections, you will need to trust the Foreman CA. This is typically stored in /var/lib/puppet/ssl/certs/ca.pem, you may wish to copy this to something like /var/www/html/pub/ca.crt so that users may easily find it.
* Keyboard mappings are currently fixed to English only.
* When using Firefox, if you use Foreman via HTTPS, Firefox might block the connection. To fix it, go to about:config and enable network.websocket.allowInsecureFromHTTPS. Same goes for Chrome, to fix it, go to chrome://flags/ and enable Allow insecure WebSocket from https origin

### Troubleshooting Steps

* Check for a "websockify.py" process on your Foreman server when opening the console page in Foreman
* If websockify.py is missing, check /var/log/foreman/production.log for stderr output with logging increased to debug
* Look at the last argument of the process command line, it will have the hypervisor hostname and port - ensure you can resolve and ping this hostname
* Try a telnet/netcat connection from the Foreman host to the hypervisor hostname/port
* The penultimate argument of websockify.py is the listening port number, check if your web client host can telnet to it
* If using Firefox, check the known issues above and set the config appropriately
